UPD master.css blinks & index & master.js

--- a/special-design/index.html
+++ b/special-design/index.html
@@ -71,8 +71,8 @@
         <div class="option-box p-2 text-center m-2 rounded-3">
           <h4 class="m-0 fs-5">Scroll Nav Bar</h4>
           <div class="scroll-option">
-            <span class="yes text-white mt-2 d-inline-block fs-6 py-1 px-2 fw-bold rounded-3 active" data-scroll="scroll">Yes</span>
-            <span class="no text-white mt-2 d-inline-block fs-6 py-1 px-2 fw-bold rounded-3" data-scroll="noScroll">No</span>
+            <span class="yes text-white mt-2 d-inline-block fs-6 py-1 px-2 fw-bold rounded-3" data-scroll="scroll">Yes</span>
+            <span class="no text-white mt-2 d-inline-block fs-6 py-1 px-2 fw-bold rounded-3 active" data-scroll="noScroll">No</span>
           </div>
         </div>
         <button class="reset-options text-white border-0 my-2 mx-auto d-block text-center fw-bold p-2 rounded-3">Reset Options</button>
