ADD placeHolder in input Login

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <div class="input-box position-relative mt-4 mb-2 mx-0 border-bottom border-white border-3">
             <span class="icon position-absolute text-white fs-5"><ion-icon name="mail"></ion-icon></span>
             <input id="email" class="w-100 bg-transparent border-0 fs-6 text-white py-0 pe-4 ps-2" type="email" required />
+            <span class="placeholders-in position-absolute start-0 ms-3 text-white-50 fs-6">a@gmail.com</span>
             <label class="position-absolute top-50 translate-middle-y text-white fs-6">Email</label>
             <div class="input-line position-absolute start-0 w-100 bg-white"></div>
           </div>
@@ -71,6 +72,7 @@
           <div class="input-box position-relative mt-4 mb-2 mx-0 border-bottom border-white border-3">
             <span class="icon position-absolute text-white fs-5"><ion-icon class="lock" name="lock-closed"></ion-icon></span>
             <input id="password" class="w-100 bg-transparent border-0 fs-6 text-white py-0 pe-4 ps-2" type="password" required />
+            <span class="placeholders-pass position-absolute start-0 ms-3 text-white-50 fs-6">1@aAbbbb</span>
             <label class="position-absolute top-50 translate-middle-y text-white fs-6">Password</label>
             <div class="input-line position-absolute start-0 w-100 bg-white">
               <div class="prog"></div>
